second commit, adjusted hero image

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <picture>
           <img
             src="./assets/tablet/image-hero.png"
+            class="hero-image"
             alt="Circled avatars of random people"
-            width="500"
           />
         </picture>
 
