Further tweaking and fixing

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </header>
 
       <section class="main-content">
-        <div class="section-divider">
+        <div class="section-divider1">
           <div class="vertical-line"></div>
           <div class="number-divider-circle">
             <p class="number">01</p>
@@ -86,25 +86,21 @@
             src="./assets/desktop/image-woman-in-videocall.jpg"
             class="grid-image"
             alt="woman in videocall"
-            width="175"
           />
           <img
             src="./assets/desktop/image-women-videochatting.jpg"
             class="grid-image"
             alt="women videochatting"
-            width="175"
           />
           <img
             src="./assets/desktop/image-men-in-meeting.jpg"
             class="grid-image"
             alt="men in videomeeting"
-            width="175"
           />
           <img
             src="./assets/desktop/image-man-texting.jpg"
             class="grid-image"
             alt="man texting"
-            width="175"
           />
         </div>
 
@@ -122,30 +118,32 @@
       </section>
 
       <section class="footer-cta">
-        <div class="section-divider">
+       <div class="section-divider2">
           <div class="vertical-line"></div>
           <div class="number-divider-circle">
             <p class="number">02</p>
           </div>
         </div>
-
         <div class="footer-container">
-        <div class="footer-text">
-          <h2 class="footer-heading">Experience more together</h2>
+          <div class="color-layer">
+             
+            <div class="footer-text">
+              <h2 class="footer-heading">Experience more together</h2>
 
-          <p class="footer-para">
-            Stay connected with reliable HD meetings and unlimited one-on-one
-            and group video sessions.
-          </p>
-        </div>
+              <p class="footer-para">
+                Stay connected with reliable HD meetings and unlimited
+                one-on-one and group video sessions.
+              </p>
+            </div>
 
-        <button
-          type="button"
-          class="dl-button-footer"
-          onclick="alert('App should be downloading soon...')"
-        >
-          Download <span class="version-footer">v1.3</span>
-        </button>
+            <button
+              type="button"
+              class="dl-button-footer"
+              onclick="alert('App should be downloading soon...')"
+            >
+              Download <span class="version-footer">v1.3</span>
+            </button>
+          </div>
         </div>
       </section>
     </main>
